Changes "Serviços Prestados"

--- a/index.html
+++ b/index.html
@@ -681,98 +681,98 @@
 
             <div class="section-wrapper cf">
                 <div class="section-wrapper-content cf">
-                    <section class="section default-01 design-02 section-white"><div class="section-bg">
-                        <div class="section-bg-layer">
-
+                    <section class="section default-01 design-02 section-white">
+                        <div class="section-bg">
+                            <div class="section-bg-layer"></div>
+                            <div class="section-bg-layer section-bg-overlay"></div>
                         </div>
-                        <div class="section-bg-layer section-bg-overlay"></div>
-                    </div>
                         <div class="section-inner">
                             <div class="content cf wnd-no-cols">
                                 <div>
                                     <div class="text cf design-01">
                                         <div class="text-content"><h1>Serviços Prestados</h1>
-
                                             <h3>Serviços de arquitetura e gerenciamento de projetos para empresas.</h3>
                                         </div>
-                                    </div><div class="mt mt-03-column pr cf">
-                                    <div class="cf">
-                                        <div class="mt-column cf">
-
-                                            <div class="image image-default block wnd-orientation-landscape wnd-type-image" style="margin-left:32.99%;margin-right:32.99%;" id="wnd_ImageBlock_75403">
-                                                <div class="image-content cf" style="padding-bottom:115.66%;text-align:center;">
-                                                    <img src="http://static-cdn2-w2.webnode.com/files/0k/0kg/200/0kgh7w.jpg?ph=3e48b568c0" alt="" style="top:0%;left:0%;width:100%;height:auto;position:absolute;"><div class="embed-content">
-                                                </div>
-
-                                                    <div class="image-title">
-                                                        <span class="title-text"></span>
-                                                        <span class="title-overlay"></span>
+                                    </div>
+                                    <div class="mt mt-03-column pr cf">
+                                        <div class="cf">
+                                            <div class="mt-column cf">
+                                                <div class="image image-default block wnd-orientation-landscape wnd-type-image" style="margin-left:32.99%;margin-right:32.99%;" id="wnd_ImageBlock_75403">
+                                                    <div class="image-content cf" style="padding-bottom:115.66%;text-align:center;">
+                                                        <img src="http://static-cdn2-w2.webnode.com/files/0k/0kg/200/0kgh7w.jpg?ph=3e48b568c0" alt="" style="top:0%;left:0%;width:100%;height:auto;position:absolute;">
+                                                        <div class="embed-content"></div>
+                                                        <div class="image-title">
+                                                            <span class="title-text"></span>
+                                                            <span class="title-overlay"></span>
+                                                        </div>
                                                     </div>
                                                 </div>
-                                            </div>
-                                            <div class="text cf design-01">
-                                                <div class="text-content"><h3>Gerenciamento de Projetos de Edificação</h3>
-
-                                                    <ul><li>Elaboração
-                                                        do Plano de Gerenciamento de Projeto específico para cada tipo de edificação;<br></li><li>Definição
-                                                        do escopo do Projeto;</li><li>Coordenação
-                                                        multidisciplinar de toda a equipe envolvida;</li><li>Coordenação
-                                                        e gerenciamento das reuniões de equipe;</li><li>Gerenciamento
-                                                        de todas as informações do projeto;</li><li>Controle
-                                                        quantitativo e qualitativo das entregas dos projetistas;</li><li>Elaboração
-                                                        e controle de cronograma do projeto;</li><li>Administração
-                                                        do software de gerenciamento de arquivos;</li><li>Gerenciamento
-                                                        de interferência;</li><li>Compatibilização
-                                                        do projeto em todas as etapas do processo;</li><li>Reunião
-                                                        final de feedback;</li></ul>
+                                                <div class="text cf design-01">
+                                                    <div class="text-content">
+                                                        <h3>Compatibilização de Projetos</h3>
+                                                        <ul>
+                                                            <li>Acompanhamento das reuniões de projetos para análise de interferência em todas as fases;</li>
+                                                            <li>Análise qualitativa dos projetos com a visão global do produto final;</li>
+                                                            <li>Clash Detection para detecção de interferências entre todos os projetos;</li>
+                                                            <li>Relatórios de compatibilização;</li>
+                                                            <li>Reuniões de compatibilização;</li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
-                                            </div>
+                                            </div><div class="mt-column cf">
 
-                                        </div><div class="mt-column cf">
+                                                    <div class="image image-default block wnd-orientation-landscape wnd-type-image" style="margin-left:45.28%;margin-right:45.28%;" id="wnd_ImageBlock_84841">
+                                                        <div class="image-content cf" style="padding-bottom:100%;text-align:center;">
+                                                            <img src="http://static-cdn3-w2.webnode.com/files/1u/1uu/200/1uuzkx.jpg?ph=3e48b568c0" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;">
+                                                            <div class="embed-content"></div>
+                                                            <div class="image-title">
+                                                                <span class="title-text"></span>
+                                                                <span class="title-overlay"></span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="text cf design-01">
+                                                        <div class="text-content">
+                                                            <h3>Coordenação de Projetos</h3>
+                                                            <ul>
+                                                                <li>Reunião de Brainstorming para elaboração do Plano de Ação conforme escopo e características do projeto;</li>
+                                                                <li>Coordenação multidisciplinar de toda a equipe envolvida;</li>
+                                                                <li>Coordenação e gerenciamento das reuniões de equipe;</li>
+                                                                <li>Gerenciamento de todas as informações do projeto;</li>
+                                                                <li>Controle quantitativo e qualitativo das entregas dos projetistas;</li>
+                                                                <li>Elaboração e controle de cronograma do projeto;</li>
+                                                                <li>Administração do software de gerenciamento de arquivos;</li>
+                                                                <li>Gerenciamento de interferência;</li>
+                                                                <li>Reunião final de feedback;</li>
+                                                            </ul>
+                                                        </div>
+                                                    </div>
+                                                </div><div class="mt-column cf">
 
-                                        <div class="image image-default block wnd-orientation-landscape wnd-type-image" style="margin-left:45.28%;margin-right:45.28%;" id="wnd_ImageBlock_43992">
-                                            <div class="image-content cf" style="padding-bottom:100%;text-align:center;">
-                                                <img src="http://files.hsl-arquitetura2.webnode.com/200000010-6228063211/450/Projeto%20Executivos.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="embed-content">
-                                            </div>
-
-                                                <div class="image-title">
-                                                    <span class="title-text"></span>
-                                                    <span class="title-overlay"></span>
+                                                <div class="image image-default block wnd-orientation-landscape wnd-type-image" style="margin-left:45.28%;margin-right:45.28%;" id="wnd_ImageBlock_43992">
+                                                    <div class="image-content cf" style="padding-bottom:100%;text-align:center;">
+                                                        <img src="http://files.hsl-arquitetura2.webnode.com/200000010-6228063211/450/Projeto%20Executivos.jpg" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;">
+                                                        <div class="embed-content"></div>
+                                                        <div class="image-title">
+                                                            <span class="title-text"></span>
+                                                            <span class="title-overlay"></span>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                        </div>
-                                        <div class="text cf design-01">
-                                            <div class="text-content"><h3>Projetos Executivos de Arquitetura</h3>
-
-                                                <ul><li class="wnd-align-justify">Projetos Executivos de Arquitetura;<br></li><li class="wnd-align-justify">Detalhamentos Construtivos de Arquitetura;<br></li><li class="wnd-align-justify">Desenvolvimento dos projetos em ferramentas BIM;</li><li class="wnd-align-justify">Desenvolvimento de projetos em Autocad;</li></ul>
-                                            </div>
-                                        </div>
-
-                                    </div><div class="mt-column cf">
-
-                                        <div class="image image-default block wnd-orientation-landscape wnd-type-image" style="margin-left:45.28%;margin-right:45.28%;" id="wnd_ImageBlock_84841">
-                                            <div class="image-content cf" style="padding-bottom:100%;text-align:center;">
-                                                <img src="http://static-cdn3-w2.webnode.com/files/1u/1uu/200/1uuzkx.jpg?ph=3e48b568c0" alt="" style="top:0%;left:0%;width:100%;height:100%;position:absolute;"><div class="embed-content">
-                                            </div>
-
-                                                <div class="image-title">
-                                                    <span class="title-text"></span>
-                                                    <span class="title-overlay"></span>
+                                                <div class="text cf design-01">
+                                                    <div class="text-content">
+                                                        <h3>Projetos Executivos de Arquitetura</h3>
+                                                        <ul>
+                                                            <li>Desenvolvimento de projetos de arquitetura conforme escopo específico;</li>
+                                                            <li>Projetos desenvolvidos em BIM</li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
+
                                             </div>
                                         </div>
-                                        <div class="text cf design-01">
-                                            <div class="text-content"><h3>Consultoria em Gestão de Projetos focados em Arquitetura</h3>
-
-                                                <ul><li>Consultoria Técnica para implantação de ferramentas de gestão de projetos específicas para a área da construção civil;<br></li><li>Treinamento de Equipe;</li></ul>
-                                            </div>
-                                        </div>
-
-                                    </div>
                                     </div>
                                 </div>
-                                </div>
-
                             </div>
                         </div>
                     </section>
@@ -834,6 +834,7 @@
                                                 necessidade de cada cliente.</p>
                                             <p>Alguns escritórios clientes:</p>
                                             <ul>
+                                                <li>PUC/RS</li>
                                                 <li>Burger Arquitetos</li>
                                                 <li>Gestão Eficiente</li>
                                                 <li>Projetebem</li>
@@ -862,9 +863,7 @@
                     </section>
                     <section class="section default-01 design-01 section-media wnd-background-solid">
                         <div class="section-bg">
-                            <div class="section-bg-layer wnd-background-solid" style="background-color:#37474F">
-
-                            </div>
+                            <div class="section-bg-layer wnd-background-solid" style="background-color:#37474F"></div>
                             <div class="section-bg-layer section-bg-overlay"></div>
                         </div>
                         <div class="section-inner">
@@ -874,8 +873,7 @@
                                         <hr>
                                     </div>
                                     <div class="text cf design-01">
-                                        <div class="text-content"><h1>Alguns Trabalhos&nbsp;</h1>
-                                        </div>
+                                        <div class="text-content"><h1>Alguns Trabalhos&nbsp;</h1></div>
                                     </div>
                                     <div class="hr-line block design-01">
                                         <hr>
